packages/kit/test/apps/basics/src/routes/errors/nested-error-page/+page.svelte
<a href="/errors/nested-error-page/nope">nope</a>
